--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,8 +39,8 @@ classifiers = [
 
 
 [project.urls]
-homepage = 'https://github.com/beanbaginc/python-typelets'
-documentation = 'https://github.com/beanbaginc/python-typelets'
+homepage = 'https://typelets.readthedocs.io/'
+documentation = 'https://typelets.readthedocs.io/'
 repository = 'https://github.com/beanbaginc/python-typelets'
 
 
